2007-01-05  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpbrushselectbutton.c: reverted the change for bug
	#356901 and instead applied a patch from Kyoichiro Suda that's
	actually a better fix and also plugs a memleak (see bug #393158).

2007-01-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/bmp/bmpread.c (ReadImage): applied patch from Aurimas
	Juška. Use the alpha channel if and only if a bitmap contains at
	least one non-zero value. Fixes bug #352262.

2007-01-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/nova.c: minor code cleanup. Changed mnemonic of
	the menu entry.

2007-01-04  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/script-fu/scripts/old-photo.scm: fixed crash when
	Mottle option is selected (mLayer was incorrectly declared).

2007-01-04  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppreviewarea.c: fixed clipping (bug #392692).

2007-01-04  Tor Lillqvist  <tml@novell.com>

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_image): Add
	workaround for a problem that occurs on Win32 when one has opened
	an image from the root of a drive letter and then does Save As.

2007-01-03  Raphaël Quinet  <raphael@gimp.org>

	* libgimpwidgets/Makefile.am (libgimpwidgetsinclude_HEADERS):
	install gimpratioentry.h, otherwise it is not possible to build
	any plug-ins including gimpwidgets.h.

2007-01-03  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpbrushselect.c
	* libgimp/gimpprogress.c
	* libgimp/gimpgradientselect.c
	* libgimp/gimpfontselect.c
	* libgimp/gimppatternselect.c
	* libgimp/gimppaletteselect.c: removed pointless and partly wrong
	information from gimp_install_temp_proc() calls.

2007-01-03  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpbrushselectbutton.c (gimp_brush_select_button_new):
	initialize opacity, spacing and paint mode as described by the API
	docs. Fixes bug #356901.

2007-01-03  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpcolorconfig.c: fixed blurb.

2007-01-03  Sven Neumann  <sven@gimp.org>
