@@ -84,10 +84,24 @@ static const LinuxInputEvent key_events[] =
 
 static const LinuxInputEvent rel_events[] =
 {
-  { REL_WHEEL,     "wheel-turn-left",  N_("Wheel Turn Left")  },
-  { REL_WHEEL,     "wheel-turn-right", N_("Wheel Turn Right") },
-  { REL_DIAL,      "dial-turn-left",   N_("Dial Turn Left")   },
-  { REL_DIAL,      "dial-turn-right",  N_("Dial Turn Right")  },
+  { REL_X,      "x-move-left",                   N_("X Move Left")               },
+  { REL_X,      "x-move-right",                  N_("X Move Right")              },
+  { REL_Y,      "y-move-down",                   N_("Y Move Down")               },
+  { REL_Y,      "y-move-up",                     N_("Y Move Up")                 },
+  { REL_Z,      "z-move-down",                   N_("Z Move Down")               },
+  { REL_Z,      "z-move-up",                     N_("Z Move Up")                 },
+  { REL_RX,     "x-axis-turn-left",              N_("X Axis Turn Left")          },
+  { REL_RX,     "x-axis-turn-right",             N_("X Axis Turn Right")         },
+  { REL_RY,     "y-axis-turn-back",              N_("Y Axis Turn Back")          },
+  { REL_RY,     "y-axis-turn-forward",           N_("Y Axis Turn Forward")       },
+  { REL_RZ,     "z-axis-turn-left",              N_("Z Axis Turn Left")          },
+  { REL_RZ,     "z-axis-turn-right",             N_("Z Axis Turn Right")         },
+  { REL_HWHEEL, "horizontal-wheel-turn-back",    N_("Horiz. Wheel Turn Back")    },
+  { REL_HWHEEL, "horizontal-wheel-turn-forward", N_("Horiz. Wheel Turn Forward") },
+  { REL_DIAL,   "dial-turn-left",                N_("Dial Turn Left")            },
+  { REL_DIAL,   "dial-turn-right",               N_("Dial Turn Right")           },
+  { REL_WHEEL,  "wheel-turn-left",               N_("Wheel Turn Left")           },
+  { REL_WHEEL,  "wheel-turn-right",              N_("Wheel Turn Right")          },
 };
 
 
